update gitconfig and ssh commands

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,15 +1,9 @@
-[user]
-	name = Chris Gradwohl
-	email = 15326707+cgradwohl@users.noreply.github.com
-
-[includeIf "gitdir:~/PlayQ/"]
+[includeIf "gitdir:~/PlayQ/**"]
 	path = ~/.gitconfig-cgradwohl-playq
 
-[includeIf "gitdir:~/PlayQ-DevOps/"]
+[includeIf "gitdir:~/PlayQ-DevOps/**"]
 	path = ~/.gitconfig-cgradwohl-playq
 
-[init]
-	defaultBranch = main
+[includeIf "gitdir:~/CGradwohl/**"]
+	path = ~/.gitconfig-cgradwohl
 
-[core]
-	sshCommand = "ssh -i ~/.ssh/id_ed25519_cgradwohl"
