--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -6,10 +6,13 @@ Host github-cgradwohl
   IdentityFile ~/.ssh/id_ed25519_cgradwohl
   IdentitiesOnly yes
 
-Host github.com
+
+Host github-playq
   HostName github.com
   User git
   AddKeysToAgent yes
   UseKeychain yes
   IdentityFile ~/.ssh/id_ed25519_cgradwohl-playq
   IdentitiesOnly yes
+
+
