--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,18 +1,6 @@
-Host github-cgradwohl
+Host github.com
   Hostname github.com
   User git
   AddKeysToAgent yes
   UseKeychain yes
-  IdentityFile ~/.ssh/id_ed25519_cgradwohl
   IdentitiesOnly yes
-
-
-Host github-playq
-  HostName github.com
-  User git
-  AddKeysToAgent yes
-  UseKeychain yes
-  IdentityFile ~/.ssh/id_ed25519_cgradwohl-playq
-  IdentitiesOnly yes
-
-
