--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,8 +11,8 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 set-option -g status-position top
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
