Updates  Please enter the commit message for your changes. Lines starting

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ bind r source-file ~/.tmux.conf
 
 set -g prefix C-s
 
+set-option -g history-limit 100000
 set -g mouse on
 
 bind-key h select-pane -L
