--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,7 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 set-option -g status-position top
 set-option -ga terminal-overrides ",xterm-256color:Tc"
