vim copy mode for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,8 @@ set -g prefix C-s
 set-option -g history-limit 100000
 set -g mouse on
 
+setw -g mode-keys vi
+
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
