startship and nvim

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -13,6 +13,7 @@ symbol = " "
 
 [character]
 disabled = false
+# vimcmd_symbol = '[V](bold green) '
 # success_symbol = "[](green) "
 # error_symbol = "[](maroon) "
 
