--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,5 @@
-theme = catppuccin-mocha
+# theme = catppuccin-mocha
+theme = rose-pine
 font-family = MesloLGS Nerd Font Mono
 font-size = 14
 window-padding-x = 10
