--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,4 +8,11 @@
 	path = ~/.gitconfig-cgradwohl
 
 [includeIf "gitdir:~/cloudspark.io/**"]
-	path = ~/.gitconfig-sudospark
+    path = ~/.gitconfig-sudospark
+
+[includeIf "gitdir:~/pray-with-me/**"]
+	path = ~/.gitconfig-praywithme-dev
+
+[user]
+	name = Chris Gradwohl
+	email = 15326707+cgradwohl@users.noreply.github.com
