--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,5 @@
 # theme = catppuccin-mocha
-theme = rose-pine-moon
+theme = rose-pine-dawn
 font-family = MesloLGS Nerd Font Mono
 font-size = 14
 window-padding-x = 10
