--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,5 @@
 # theme = catppuccin-mocha
-# theme = rose-pine-dawn
-theme = voilet-light
+theme = rose-pine-dawn
 font-family = MesloLGS Nerd Font Mono
 font-size = 14
 window-padding-x = 10
