--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,3 +16,9 @@
 ; [user]
 	; name = Chris Gradwohl
 	; email = 15326707+cgradwohl@users.noreply.github.com
+[credential "https://github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
