--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,4 @@
-# theme = catppuccin-mocha
-theme = rose-pine-moon
+theme = Rose Pine
 font-family = MesloLGS Nerd Font Mono
 font-size = 14
 window-padding-x = 10
@@ -7,27 +6,3 @@ window-padding-y = 10
 background-opacity = 1
 window-decoration = false
 
-
-# Voilet Light Theme
-# palette = 0=#56595c
-# palette = 1=#c94c22
-# palette = 2=#85981c
-# palette = 3=#b4881d
-# palette = 4=#2e8bce
-# palette = 5=#d13a82
-# palette = 6=#32a198
-# palette = 7=#d3d0c9
-# palette = 8=#45484b
-# palette = 9=#bd3613
-# palette = 10=#738a04
-# palette = 11=#a57705
-# palette = 12=#2176c7
-# palette = 13=#c61c6f
-# palette = 14=#259286
-# palette = 15=#c9c6bd
-# background = #fcf4dc
-# foreground = #536870
-# cursor-color = #536870
-# cursor-text = #fcf4dc
-# selection-background = #595ab7
-# selection-foreground = #fcf4dc
