--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,4 +21,8 @@
 	helper = !/opt/homebrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+    helper = !/opt/homebrew/bin/gh auth git-credential
+
+; global settings
+[pull]
+    rebase = false
