--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,16 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+# general config
 set -g prefix C-s
-
 set-option -g history-limit 100000
 set -g mouse on
-
 setw -g mode-keys vi
+
+# navigation config
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -14,6 +18,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+# window and status bar config
 set-option -g status-position top
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
